cmake_minimum_required (VERSION 2.8.12)
project (benchmarks)

include_directories ("../../include/cpp0x")
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif (NOT CMAKE_BUILD_TYPE)

file (GLOB benchmark_sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
foreach (benchmark_source ${benchmark_sources})
   if(${benchmark_source} STREQUAL "VectorAddTbb.cpp")
      message("Excluding VectorAddTbb.cpp")
   else(${benchmark_source} STREQUAL "VectorAddTbb.cpp")
      message("Adding ${benchmark_source}")
      string (REPLACE ".cpp" "" benchmark_prefix ${benchmark_source})
      add_executable (${benchmark_prefix} ${benchmark_source})
set_property(TARGET ${benchmark_prefix} PROPERTY CXX_STANDARD 14)
   endif(${benchmark_source} STREQUAL "VectorAddTbb.cpp")
endforeach (benchmark_source)

find_package(TBB)
if(TBB_FOUND)
   message("TBB libraries to be linked: ${TBB_LIBRARIES}")
   if ("x${TBB_LIBRARIES}" STREQUAL "x")
      set (TBB_LIBRARIES tbb)
#      message("Manually added TBB libraries to be linked: ${TBB_LIBRARIES}")
   endif("x${TBB_LIBRARIES}" STREQUAL "x")
   include_directories (${TBB_INCLUDE_DIRS})
   add_executable (VectorAddTbb VectorAddTbb.cpp)
   set_property(TARGET VectorAddTbb PROPERTY CXX_STANDARD 14)
   target_link_libraries(VectorAddTbb ${TBB_LIBRARIES})
endif(TBB_FOUND)
