cmake_minimum_required (VERSION 2.8.12)
project (tests)

include_directories ("../../include/cpp0x")
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug)
endif (NOT CMAKE_BUILD_TYPE)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftemplate-backtrace-limit=0")

file (GLOB test_sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
foreach (test_source ${test_sources})
  if(${test_source} STREQUAL "Ginac.cpp")
   message("Excluding Ginac.cpp")
  elseif(${test_source} STREQUAL "Symbex.cpp")
   message("Excluding Symbex.cpp")
  elseif(${test_source} STREQUAL "test_conf_bits.cpp")
   message("Excluding test_conf_bits.cpp")

  else(${test_source} STREQUAL "Ginac.cpp")
   message("Adding ${test_source}")
   string (REPLACE ".cpp" "" test_prefix ${test_source})
   add_executable (${test_prefix} ${test_source})
set_property(TARGET ${test_prefix} PROPERTY CXX_STANDARD 14)
  endif(${test_source} STREQUAL "Ginac.cpp")
endforeach (test_source)

# If the GINAC library (https://www.ginac.de/) has been installed, the next variable may be set to ON
set(GINAC_INSTALLED OFF)
if (GINAC_INSTALLED)
message("Adding Ginac.cpp")
add_executable(Ginac Ginac.cpp)
set_property(TARGET Ginac PROPERTY CXX_STANDARD 14)
target_link_libraries(Ginac ginac cln dl)
endif(GINAC_INSTALLED)

